--- a/2d_classification/mednist_tutorial.ipynb
+++ b/2d_classification/mednist_tutorial.ipynb
@@ -36,13 +36,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Setup environment\n",
-    "## 配置环境"
+    "## Setup environment 配置环境"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -55,8 +54,10 @@
     }
    ],
    "source": [
+    "# 若没有 monai 和 matplotlib，则运行命令安装\n",
     "!python -c \"import monai\" || pip install -q \"monai-weekly[pillow, tqdm]\"\n",
     "!python -c \"import matplotlib\" || pip install -q matplotlib\n",
+    "# 这是 jupyter notebook 的魔法命令，用于设置 matplotlib 绘制的图像直接显示在页面里\n",
     "%matplotlib inline"
    ]
   },
@@ -64,16 +65,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Setup imports"
+    "## Setup imports 引入所有的依赖"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\微星\\AppData\\Roaming\\Python\\Python311\\site-packages\\ignite\\handlers\\checkpoint.py:17: DeprecationWarning: `TorchScript` support for functional optimizers is deprecated and will be removed in a future PyTorch release. Consider using the `torch.compile` optimizer instead.\n",
+      "  from torch.distributed.optim import ZeroRedundancyOptimizer\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -147,7 +156,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Setup data directory\n",
+    "## Setup data directory 设置数据文件夹位置\n",
     "\n",
     "You can specify a directory with the `MONAI_DATA_DIRECTORY` environment variable.  \n",
     "This allows you to save results and reuse downloads.  \n",
@@ -156,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -170,6 +179,7 @@
     }
    ],
    "source": [
+    "# 在你的windows 电脑上设置 key 为 MONAI_DATA_DIRECTORY 值为文件夹目录的环境变量，设置好后重启电脑。\n",
     "directory = os.environ.get(\"MONAI_DATA_DIRECTORY\")\n",
     "if directory is not None:\n",
     "    os.makedirs(directory, exist_ok=True)\n",
@@ -181,7 +191,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Download dataset\n",
+    "## Download dataset 下载数据集\n",
     "\n",
     "The MedNIST dataset was gathered from several sets from [TCIA](https://wiki.cancerimagingarchive.net/display/Public/Data+Usage+Policies+and+Restrictions),\n",
     "[the RSNA Bone Age Challenge](http://rsnachallenges.cloudapp.net/competitions/4),\n",
@@ -195,12 +205,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
+    "# 数据集下载地址及压缩包的 MD5 值\n",
     "resource = \"https://github.com/Project-MONAI/MONAI-extra-test-data/releases/download/0.8.1/MedNIST.tar.gz\"\n",
     "md5 = \"0bc7306e7427e00ad1c5526a6677552d\"\n",
     "\n",
@@ -214,12 +225,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Set deterministic training for reproducibility"
+    "## Set deterministic training for reproducibility 设置确定性训练"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +241,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Read image filenames from the dataset folders\n",
+    "## Read image filenames from the dataset folders 从数据集中读取图像文件名\n",
     "\n",
     "First of all, check the dataset files and show some statistics.  \n",
     "There are 6 folders in the dataset: Hand, AbdomenCT, CXR, ChestCT, BreastMRI, HeadCT,  \n",
@@ -239,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
@@ -270,12 +281,19 @@
     "    image_class.extend([i] * num_each[i])\n",
     "num_total = len(image_class)\n",
     "# print(image_files_list)\n",
+    "# 获取图片尺寸\n",
     "image_width, image_height = PIL.Image.open(image_files_list[0]).size\n",
     "\n",
     "print(f\"Total image count: {num_total}\")\n",
     "print(f\"Image dimensions: {image_width} x {image_height}\")\n",
     "print(f\"Label names: {class_names}\")\n",
-    "print(f\"Label counts: {num_each}\")"
+    "print(f\"Label counts: {num_each}\")\n",
+    "# AbdomenCT 腹部CT\n",
+    "# BreastMRI 乳房核磁共振\n",
+    "# CXR 胸部X射线\n",
+    "# ChestCT 胸部CT\n",
+    "# Hand 手\n",
+    "# HeadCT 头部CT"
    ]
   },
   {
@@ -324,7 +342,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prepare training, validation and test data lists\n",
+    "## Prepare training, validation and test data lists 准备训练，测试验证数据列表\n",
     "\n",
     "Randomly select 10% of the dataset as validation and 10% as test."
    ]
@@ -435,17 +453,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cpu\n"
+     ]
+    }
+   ],
    "source": [
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(device)\n",
     "model = DenseNet121(spatial_dims=2, in_channels=1, out_channels=num_class).to(device)\n",
     "loss_function = torch.nn.CrossEntropyLoss()\n",
     "optimizer = torch.optim.Adam(model.parameters(), 1e-5)\n",
     "max_epochs = 4\n",
     "val_interval = 1\n",
     "auc_metric = ROCAUCMetric()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CUDA版本: None\n",
+      "Pytorch版本: 2.4.0+cpu\n",
+      "显卡是否可用: 不可用\n",
+      "显卡数量: 0\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "Torch not compiled with CUDA enabled",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[14], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m显卡是否可用:\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m可用\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m(torch\u001b[38;5;241m.\u001b[39mcuda\u001b[38;5;241m.\u001b[39mis_available()) \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m不可用\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m显卡数量:\u001b[39m\u001b[38;5;124m'\u001b[39m,torch\u001b[38;5;241m.\u001b[39mcuda\u001b[38;5;241m.\u001b[39mdevice_count())\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m是否支持BF16数字格式:\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m支持\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m (torch\u001b[38;5;241m.\u001b[39mcuda\u001b[38;5;241m.\u001b[39mis_bf16_supported()) \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m不支持\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m当前显卡型号:\u001b[39m\u001b[38;5;124m'\u001b[39m,torch\u001b[38;5;241m.\u001b[39mcuda\u001b[38;5;241m.\u001b[39mget_device_name())\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m当前显卡的CUDA算力:\u001b[39m\u001b[38;5;124m'\u001b[39m,torch\u001b[38;5;241m.\u001b[39mcuda\u001b[38;5;241m.\u001b[39mget_device_capability())\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\torch\\cuda\\__init__.py:138\u001b[0m, in \u001b[0;36mis_bf16_supported\u001b[1;34m(including_emulation)\u001b[0m\n\u001b[0;32m    135\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mversion\u001b[38;5;241m.\u001b[39mhip:\n\u001b[0;32m    136\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m--> 138\u001b[0m device \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mcuda\u001b[38;5;241m.\u001b[39mcurrent_device()\n\u001b[0;32m    140\u001b[0m \u001b[38;5;66;03m# Check for CUDA version and device compute capability.\u001b[39;00m\n\u001b[0;32m    141\u001b[0m \u001b[38;5;66;03m# This is a fast way to check for it.\u001b[39;00m\n\u001b[0;32m    142\u001b[0m cuda_version \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mversion\u001b[38;5;241m.\u001b[39mcuda\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\torch\\cuda\\__init__.py:878\u001b[0m, in \u001b[0;36mcurrent_device\u001b[1;34m()\u001b[0m\n\u001b[0;32m    876\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcurrent_device\u001b[39m() \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mint\u001b[39m:\n\u001b[0;32m    877\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124;03m\"\"\"Return the index of a currently selected device.\"\"\"\u001b[39;00m\n\u001b[1;32m--> 878\u001b[0m     _lazy_init()\n\u001b[0;32m    879\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m torch\u001b[38;5;241m.\u001b[39m_C\u001b[38;5;241m.\u001b[39m_cuda_getDevice()\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\torch\\cuda\\__init__.py:305\u001b[0m, in \u001b[0;36m_lazy_init\u001b[1;34m()\u001b[0m\n\u001b[0;32m    300\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\n\u001b[0;32m    301\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCannot re-initialize CUDA in forked subprocess. To use CUDA with \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    302\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmultiprocessing, you must use the \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mspawn\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m start method\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    303\u001b[0m     )\n\u001b[0;32m    304\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(torch\u001b[38;5;241m.\u001b[39m_C, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_cuda_getDeviceCount\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[1;32m--> 305\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAssertionError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTorch not compiled with CUDA enabled\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    306\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m _cudart \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    307\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAssertionError\u001b[39;00m(\n\u001b[0;32m    308\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlibcudart functions unavailable. It looks like you have a broken build?\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    309\u001b[0m     )\n",
+      "\u001b[1;31mAssertionError\u001b[0m: Torch not compiled with CUDA enabled"
+     ]
+    }
+   ],
+   "source": [
+    "print('CUDA版本:',torch.version.cuda)\n",
+    "print('Pytorch版本:',torch.__version__)\n",
+    "print('显卡是否可用:','可用' if(torch.cuda.is_available()) else '不可用')\n",
+    "print('显卡数量:',torch.cuda.device_count())\n",
+    "print('是否支持BF16数字格式:','支持' if (torch.cuda.is_bf16_supported()) else '不支持')\n",
+    "print('当前显卡型号:',torch.cuda.get_device_name())\n",
+    "print('当前显卡的CUDA算力:',torch.cuda.get_device_capability())\n",
+    "print('当前显卡的总显存:',torch.cuda.get_device_properties(0).total_memory/1024/1024/1024,'GB')\n",
+    "print('是否支持TensorCore:','支持' if (torch.cuda.get_device_properties(0).major >= 7) else '不支持')\n",
+    "print('当前显卡的显存使用率:',torch.cuda.memory_allocated(0)/torch.cuda.get_device_properties(0).total_memory*100,'%')"
    ]
   },
   {
