--- a/2d_classification/mednist_tutorial.ipynb
+++ b/2d_classification/mednist_tutorial.ipynb
@@ -41,52 +41,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\微星\\AppData\\Roaming\\Python\\Python311\\site-packages\\ignite\\handlers\\checkpoint.py:17: DeprecationWarning: `TorchScript` support for functional optimizers is deprecated and will be removed in a future PyTorch release. Consider using the `torch.compile` optimizer instead.\n",
-      "  from torch.distributed.optim import ZeroRedundancyOptimizer\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\微星\\.conda\\envs\\py311\\Lib\\site-packages\\monai\\utils\\module.py\", line 211, in load_submodules\n",
-      "    mod = import_module(name)\n",
-      "          ^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\微星\\.conda\\envs\\py311\\Lib\\importlib\\__init__.py\", line 126, in import_module\n",
-      "    return _bootstrap._gcd_import(name[level:], package, level)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\微星\\.conda\\envs\\py311\\Lib\\site-packages\\monai\\apps\\generation\\maisi\\networks\\autoencoderkl_maisi.py\", line 24, in <module>\n",
-      "    from monai.networks.nets.autoencoderkl import AEKLResBlock, AutoencoderKL\n",
-      "  File \"c:\\Users\\微星\\.conda\\envs\\py311\\Lib\\site-packages\\monai\\networks\\nets\\autoencoderkl.py\", line 21, in <module>\n",
-      "    from monai.networks.blocks import Convolution, SpatialAttentionBlock, Upsample\n",
-      "ImportError: cannot import name 'SpatialAttentionBlock' from 'monai.networks.blocks' (c:\\Users\\微星\\.conda\\envs\\py311\\Lib\\site-packages\\monai\\networks\\blocks\\__init__.py)\n",
-      "\n",
-      "The above exception was the direct cause of the following exception:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<string>\", line 1, in <module>\n",
-      "  File \"c:\\Users\\微星\\.conda\\envs\\py311\\Lib\\site-packages\\monai\\__init__.py\", line 61, in <module>\n",
-      "    load_submodules(sys.modules[__name__], True, exclude_pattern=excludes)\n",
-      "  File \"c:\\Users\\微星\\.conda\\envs\\py311\\Lib\\site-packages\\monai\\utils\\module.py\", line 221, in load_submodules\n",
-      "    raise type(e)(f\"{e}\\n{msg}\").with_traceback(e.__traceback__) from e  # raise with modified message\n",
-      "    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\微星\\.conda\\envs\\py311\\Lib\\site-packages\\monai\\utils\\module.py\", line 211, in load_submodules\n",
-      "    mod = import_module(name)\n",
-      "          ^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\微星\\.conda\\envs\\py311\\Lib\\importlib\\__init__.py\", line 126, in import_module\n",
-      "    return _bootstrap._gcd_import(name[level:], package, level)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\微星\\.conda\\envs\\py311\\Lib\\site-packages\\monai\\apps\\generation\\maisi\\networks\\autoencoderkl_maisi.py\", line 24, in <module>\n",
-      "    from monai.networks.nets.autoencoderkl import AEKLResBlock, AutoencoderKL\n",
-      "  File \"c:\\Users\\微星\\.conda\\envs\\py311\\Lib\\site-packages\\monai\\networks\\nets\\autoencoderkl.py\", line 21, in <module>\n",
-      "    from monai.networks.blocks import Convolution, SpatialAttentionBlock, Upsample\n",
-      "ImportError: cannot import name 'SpatialAttentionBlock' from 'monai.networks.blocks' (c:\\Users\\微星\\.conda\\envs\\py311\\Lib\\site-packages\\monai\\networks\\blocks\\__init__.py)\n",
-      "\n",
-      "Multiple versions of MONAI may have been installed?\n",
-      "Please see the installation guide: https://docs.monai.io/en/stable/installation.html\n",
-      "\n"
+      "c:\\Users\\微星\\.conda\\envs\\py311\\Lib\\site-packages\\ignite\\handlers\\checkpoint.py:17: DeprecationWarning: `TorchScript` support for functional optimizers is deprecated and will be removed in a future PyTorch release. Consider using the `torch.compile` optimizer instead.\n",
+      "  from torch.distributed.optim import ZeroRedundancyOptimizer\n"
      ]
     }
    ],
@@ -107,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 11,
    "metadata": {
     "tags": []
    },
@@ -116,32 +79,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MONAI version: 1.3.2\n",
-      "Numpy version: 2.1.0\n",
-      "Pytorch version: 2.4.0+cu124\n",
+      "c:\\Users\\微星\\.conda\\envs\\py311\\Lib\\site-packages\\torch\\__init__.py\n",
+      "MONAI version: 1.4.dev2435\n",
+      "Numpy version: 1.26.4\n",
+      "Pytorch version: 2.4.1+cu124\n",
       "MONAI flags: HAS_EXT = False, USE_COMPILED = False, USE_META_DICT = False\n",
-      "MONAI rev id: 59a7211070538586369afd4a01eca0a7fe2e742e\n",
-      "MONAI __file__: C:\\Users\\<username>\\AppData\\Roaming\\Python\\Python311\\site-packages\\monai\\__init__.py\n",
+      "MONAI rev id: d311b1d7b12a95dd7de995b507ffbb5ed413bab6\n",
+      "MONAI __file__: c:\\Users\\<username>\\.conda\\envs\\py311\\Lib\\site-packages\\monai\\__init__.py\n",
       "\n",
       "Optional dependencies:\n",
       "Pytorch Ignite version: 0.4.11\n",
       "ITK version: 5.4.0\n",
       "Nibabel version: 5.2.1\n",
-      "scikit-image version: NOT INSTALLED or UNKNOWN VERSION.\n",
+      "scikit-image version: 0.24.0\n",
       "scipy version: 1.14.1\n",
       "Pillow version: 10.4.0\n",
       "Tensorboard version: 2.17.1\n",
-      "gdown version: NOT INSTALLED or UNKNOWN VERSION.\n",
-      "TorchVision version: 0.19.0+cu124\n",
+      "gdown version: 5.2.0\n",
+      "TorchVision version: 0.19.1+cu124\n",
       "tqdm version: 4.66.5\n",
-      "lmdb version: NOT INSTALLED or UNKNOWN VERSION.\n",
+      "lmdb version: 1.5.1\n",
       "psutil version: 6.0.0\n",
-      "pandas version: NOT INSTALLED or UNKNOWN VERSION.\n",
+      "pandas version: 2.2.2\n",
       "einops version: 0.7.0\n",
       "transformers version: NOT INSTALLED or UNKNOWN VERSION.\n",
-      "mlflow version: NOT INSTALLED or UNKNOWN VERSION.\n",
-      "pynrrd version: NOT INSTALLED or UNKNOWN VERSION.\n",
-      "clearml version: NOT INSTALLED or UNKNOWN VERSION.\n",
+      "mlflow version: 2.16.0\n",
+      "pynrrd version: 1.0.0\n",
+      "clearml version: 1.16.4\n",
       "\n",
       "For details about installing the optional dependencies, please visit:\n",
       "    https://docs.monai.io/en/latest/installation.html#installing-the-recommended-dependencies\n",
@@ -153,10 +117,15 @@
     "import os\n",
     "import shutil\n",
     "import tempfile\n",
+    "# matplotlib 是面向对象的图表库\n",
     "import matplotlib.pyplot as plt\n",
+    "# Python Image Library 图像处理库\n",
     "import PIL\n",
+    "# PyTorch 是实现 Transformer AI 训练架构的深度学习框架\n",
     "import torch\n",
+    "# print(torch.__file__)\n",
     "from torch.utils.tensorboard import SummaryWriter\n",
+    "# numpy 是Python 的科学计算库\n",
     "import numpy as np\n",
     "from sklearn.metrics import classification_report\n",
     "\n",
@@ -194,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 12,
    "metadata": {
     "tags": []
    },
@@ -208,7 +177,7 @@
     }
    ],
    "source": [
-    "# 在你的windows 电脑上设置 key 为 MONAI_DATA_DIRECTORY 值为文件夹目录的环境变量，设置好后重启电脑。\n",
+    "# 在你的 windows 电脑上设置 key 为 MONAI_DATA_DIRECTORY 值为文件夹目录的环境变量，设置好后重启电脑。\n",
     "directory = os.environ.get(\"MONAI_DATA_DIRECTORY\")\n",
     "if directory is not None:\n",
     "    os.makedirs(directory, exist_ok=True)\n",
@@ -234,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 13,
    "metadata": {
     "tags": []
    },
@@ -259,10 +228,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#设置随机种子\n",
     "set_determinism(seed=0)"
    ]
   },
@@ -279,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 15,
    "metadata": {
     "tags": []
    },
@@ -336,12 +306,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Randomly pick images from the dataset to visualize and check"
+    "## Randomly pick images from the dataset to visualize and check 随机挑选数据集中的图像，查看和检查数据集是否加载正确"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 17,
    "metadata": {
     "tags": []
    },
@@ -416,24 +386,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "OverflowError",
-     "evalue": "Python int too large to convert to C long",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mOverflowError\u001b[0m                             Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[85], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m train_transforms \u001b[38;5;241m=\u001b[39m \u001b[43mCompose\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[43m    \u001b[49m\u001b[43m[\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[43m        \u001b[49m\u001b[43mLoadImage\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimage_only\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m      4\u001b[0m \u001b[43m        \u001b[49m\u001b[43mEnsureChannelFirst\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m      5\u001b[0m \u001b[43m        \u001b[49m\u001b[43mScaleIntensity\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m      6\u001b[0m \u001b[43m        \u001b[49m\u001b[43mRandRotate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrange_x\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpi\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m12\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mprob\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.5\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkeep_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m      7\u001b[0m \u001b[43m        \u001b[49m\u001b[43mRandFlip\u001b[49m\u001b[43m(\u001b[49m\u001b[43mspatial_axis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mprob\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.5\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m      8\u001b[0m \u001b[43m        \u001b[49m\u001b[43mRandZoom\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmin_zoom\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.9\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmax_zoom\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1.1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mprob\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.5\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m      9\u001b[0m \u001b[43m    \u001b[49m\u001b[43m]\u001b[49m\n\u001b[0;32m     10\u001b[0m \u001b[43m)\u001b[49m\n\u001b[0;32m     12\u001b[0m val_transforms \u001b[38;5;241m=\u001b[39m Compose([LoadImage(image_only\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m), EnsureChannelFirst(), ScaleIntensity()])\n\u001b[0;32m     14\u001b[0m y_pred_trans \u001b[38;5;241m=\u001b[39m Compose([Activations(softmax\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)])\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\monai\\transforms\\compose.py:251\u001b[0m, in \u001b[0;36mCompose.__init__\u001b[1;34m(self, transforms, map_items, unpack_items, log_stats, lazy, overrides)\u001b[0m\n\u001b[0;32m    249\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39munpack_items \u001b[38;5;241m=\u001b[39m unpack_items\n\u001b[0;32m    250\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlog_stats \u001b[38;5;241m=\u001b[39m log_stats\n\u001b[1;32m--> 251\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mset_random_state\u001b[49m\u001b[43m(\u001b[49m\u001b[43mseed\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mget_seed\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    252\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moverrides \u001b[38;5;241m=\u001b[39m overrides\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\monai\\transforms\\compose.py:263\u001b[0m, in \u001b[0;36mCompose.set_random_state\u001b[1;34m(self, seed, state)\u001b[0m\n\u001b[0;32m    261\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(_transform, Randomizable):\n\u001b[0;32m    262\u001b[0m         \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[1;32m--> 263\u001b[0m     \u001b[43m_transform\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mset_random_state\u001b[49m\u001b[43m(\u001b[49m\u001b[43mseed\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mR\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrandint\u001b[49m\u001b[43m(\u001b[49m\u001b[43mMAX_SEED\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43muint32\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    264\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\monai\\transforms\\transform.py:207\u001b[0m, in \u001b[0;36mRandomizable.set_random_state\u001b[1;34m(self, seed, state)\u001b[0m\n\u001b[0;32m    205\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m seed \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    206\u001b[0m     _seed \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mid\u001b[39m(seed) \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(seed, (\u001b[38;5;28mint\u001b[39m, np\u001b[38;5;241m.\u001b[39minteger)) \u001b[38;5;28;01melse\u001b[39;00m seed\n\u001b[1;32m--> 207\u001b[0m     _seed \u001b[38;5;241m=\u001b[39m \u001b[43m_seed\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m%\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mMAX_SEED\u001b[49m\n\u001b[0;32m    208\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mR \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mRandomState(_seed)\n\u001b[0;32m    209\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\n",
-      "\u001b[1;31mOverflowError\u001b[0m: Python int too large to convert to C long"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_transforms = Compose(\n",
     "    [\n",
@@ -454,21 +409,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'train_transforms' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[30], line 14\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__getitem__\u001b[39m(\u001b[38;5;28mself\u001b[39m, index):\n\u001b[0;32m     11\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtransforms(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mimage_files[index]), \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlabels[index]\n\u001b[1;32m---> 14\u001b[0m train_ds \u001b[38;5;241m=\u001b[39m MedNISTDataset(train_x, train_y, \u001b[43mtrain_transforms\u001b[49m)\n\u001b[0;32m     15\u001b[0m train_loader \u001b[38;5;241m=\u001b[39m DataLoader(train_ds, batch_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m300\u001b[39m, shuffle\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, num_workers\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m)\n\u001b[0;32m     17\u001b[0m val_ds \u001b[38;5;241m=\u001b[39m MedNISTDataset(val_x, val_y, val_transforms)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'train_transforms' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class MedNISTDataset(torch.utils.data.Dataset):\n",
     "    def __init__(self, image_files, labels, transforms):\n",
@@ -509,14 +452,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cpu\n"
+      "cuda\n"
      ]
     }
    ],
@@ -533,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +484,7 @@
      "output_type": "stream",
      "text": [
       "CUDA版本: 12.4\n",
-      "Pytorch版本: 2.4.0+cu124\n",
+      "Pytorch版本: 2.4.1+cu124\n",
       "显卡是否可用: 可用\n",
       "显卡数量: 1\n",
       "是否支持BF16数字格式: 支持\n",
@@ -549,7 +492,7 @@
       "当前显卡的CUDA算力: (8, 9)\n",
       "当前显卡的总显存: 7.99560546875 GB\n",
       "是否支持TensorCore: 支持\n",
-      "当前显卡的显存使用率: 0.0 %\n"
+      "当前显卡的显存使用率: 0.3291447996183206 %\n"
      ]
     }
    ],
@@ -578,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "tags": []
    },
