--- a/2d_classification/mednist_tutorial.ipynb
+++ b/2d_classification/mednist_tutorial.ipynb
@@ -213,7 +213,9 @@
     "resource = \"https://github.com/Project-MONAI/MONAI-extra-test-data/releases/download/0.8.1/MedNIST.tar.gz\"\n",
     "md5 = \"0bc7306e7427e00ad1c5526a6677552d\"\n",
     "\n",
+    "# 压缩文件地址\n",
     "compressed_file = os.path.join(root_dir, \"MedNIST.tar.gz\")\n",
+    "# 数据文件夹地址\n",
     "data_dir = os.path.join(root_dir, \"MedNIST\")\n",
     "if not os.path.exists(data_dir):\n",
     "    download_and_extract(resource, compressed_file, root_dir, md5)"
@@ -278,6 +280,7 @@
     "for i in range(num_class):\n",
     "    image_files_list.extend(image_files[i])\n",
     "    image_class.extend([i] * num_each[i])\n",
+    "# 图片总数\n",
     "num_total = len(image_class)\n",
     "# print(image_files_list)\n",
     "# 获取图片尺寸\n",
@@ -299,7 +302,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Define MONAI transforms, Dataset and Dataloader to pre-process data"
+    "## Define MONAI transforms, Dataset and Dataloader to pre-process data 设置 MONAI 的 Transforms 训练模型，数据集和预处理数据的数据加载器"
    ]
   },
   {
