--- a/2d_classification/mednist_tutorial.ipynb
+++ b/2d_classification/mednist_tutorial.ipynb
@@ -246,7 +246,9 @@
     "\n",
     "First of all, check the dataset files and show some statistics.  \n",
     "There are 6 folders in the dataset: Hand, AbdomenCT, CXR, ChestCT, BreastMRI, HeadCT,  \n",
-    "which should be used as the labels to train our classification model."
+    "which should be used as the labels to train our classification model.\n",
+    "数据集中有 6 个文件夹分别是手、腹部 CT、胸部 X 射线、胸部 CT、乳房核磁共振、头部 CT，\n",
+    "我们用文件夹的名称作为标签，用文件夹中的图像数据训练分类模型。"
    ]
   },
   {
@@ -302,7 +304,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Define MONAI transforms, Dataset and Dataloader to pre-process data 设置 MONAI 的 Transforms 训练模型，数据集和预处理数据的数据加载器"
+    "## Define MONAI transforms, Dataset and Dataloader to pre-process data 设置 MONAI 的 Transforms 训练模型，数据集和数据加载器去预处理数据"
    ]
   },
   {
@@ -393,17 +395,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Compose 是一个链式的 Transform 算法实现\n",
+    "# 训练用的 tranmsform\n",
     "train_transforms = Compose(\n",
     "    [\n",
-    "        LoadImage(image_only=True),\n",
-    "        EnsureChannelFirst(),\n",
-    "        ScaleIntensity(),\n",
-    "        RandRotate(range_x=np.pi / 12, prob=0.5, keep_size=True),\n",
-    "        RandFlip(spatial_axis=0, prob=0.5),\n",
-    "        RandZoom(min_zoom=0.9, max_zoom=1.1, prob=0.5),\n",
+    "        LoadImage(image_only=True), # 加载图像\n",
+    "        EnsureChannelFirst(), # 确保图像数据的通道数位于维度的第一位，这对于某些模型来说是非常重要的，因为它们可能期望输入数据具有特定的形状。\n",
+    "        ScaleIntensity(), # 对图像的强度值进行缩放，使得数据能够在训练过程中更好地收敛。\n",
+    "        RandRotate(range_x=np.pi / 12, prob=0.5, keep_size=True), # 随机旋转图像，旋转角度范围为 (-pi/12) 到 (+pi/12)，以 0.5 的概率执行，并且保持旋转后的图像大小不变。\n",
+    "        RandFlip(spatial_axis=0, prob=0.5), # 按照 0.5 的概率随机地沿图像的第 0 轴（通常是垂直轴）进行翻转。\n",
+    "        RandZoom(min_zoom=0.9, max_zoom=1.1, prob=0.5), # 随机缩放图像，缩放比例在 0.9 到 1.1 之间变化，以 0.5 的概率执行。\n",
     "    ]\n",
     ")\n",
     "\n",
+    "# 值验证用的 tranmsform\n",
     "val_transforms = Compose([LoadImage(image_only=True), EnsureChannelFirst(), ScaleIntensity()])\n",
     "\n",
     "y_pred_trans = Compose([Activations(softmax=True)])\n",
@@ -443,7 +448,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Define network and optimizer\n",
+    "## Define network and optimizer 定义训练网络和优化器\n",
     "\n",
     "1. Set learning rate for how much the model is updated per batch.\n",
     "1. Set total epoch number, as we have shuffle and random transforms, so the training data of every epoch is different.  \n",
@@ -467,11 +472,16 @@
     }
    ],
    "source": [
+    "# 使用什么设备训练 CPU or GPU\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(device)\n",
+    "# 使用 MONAI 中 DenseNet121 模型执行训练\n",
     "model = DenseNet121(spatial_dims=2, in_channels=1, out_channels=num_class).to(device)\n",
+    "# 损失函数\n",
     "loss_function = torch.nn.CrossEntropyLoss()\n",
+    "# 优化器\n",
     "optimizer = torch.optim.Adam(model.parameters(), 1e-5)\n",
+    "# 最大迭代次数\n",
     "max_epochs = 4\n",
     "val_interval = 1\n",
     "auc_metric = ROCAUCMetric()"
@@ -516,7 +526,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Model training\n",
+    "## Model training 模型训练\n",
     "\n",
     "Execute a typical PyTorch training that run epoch loop and step loop, and do validation after every epoch.  \n",
     "Will save the model weights to file if got best validation accuracy."
@@ -548,8 +558,11 @@
     "for epoch in range(max_epochs):\n",
     "    print(\"-\" * 10)\n",
     "    print(f\"epoch {epoch + 1}/{max_epochs}\")\n",
+    "    # 模型开始训练\n",
     "    model.train()\n",
+    "    # 记录每次迭代损失的值\n",
     "    epoch_loss = 0\n",
+    "    # 步骤\n",
     "    step = 0\n",
     "    for batch_data in train_loader:\n",
     "        step += 1\n",
