--- a/2d_classification/mednist_tutorial.ipynb
+++ b/2d_classification/mednist_tutorial.ipynb
@@ -555,63 +555,82 @@
     "metric_values = []\n",
     "writer = SummaryWriter()\n",
     "\n",
+    "# 开始训练循环\n",
     "for epoch in range(max_epochs):\n",
     "    print(\"-\" * 10)\n",
     "    print(f\"epoch {epoch + 1}/{max_epochs}\")\n",
-    "    # 模型开始训练\n",
+    "    # 设置模型为训练模式\n",
     "    model.train()\n",
-    "    # 记录每次迭代损失的值\n",
+    "    # 记录该迭代损失值\n",
     "    epoch_loss = 0\n",
-    "    # 步骤\n",
+    "    # 记录步骤\n",
     "    step = 0\n",
+    "    # 遍历训练数据加载器中的每个批次\n",
     "    for batch_data in train_loader:\n",
     "        step += 1\n",
+    "        # 将输入和标签移动到指定设备\n",
     "        inputs, labels = batch_data[0].to(device), batch_data[1].to(device)\n",
+    "        # 清零优化器的梯度\n",
     "        optimizer.zero_grad()\n",
+    "        # 前向传播得到输出\n",
     "        outputs = model(inputs)\n",
+    "        # 计算损失\n",
     "        loss = loss_function(outputs, labels)\n",
+    "        # 反向传播并更新参数\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
+    "        # 累加损失并打印当前批次的损失信息\n",
     "        epoch_loss += loss.item()\n",
     "        print(f\"{step}/{len(train_ds) // train_loader.batch_size}, \" f\"train_loss: {loss.item():.4f}\")\n",
+    "        # 使用 TensorBoard 记录训练损失\n",
     "        epoch_len = len(train_ds) // train_loader.batch_size\n",
     "        writer.add_scalar(\"train_loss\", loss.item(), epoch_len * epoch + step)\n",
+    "    \n",
+    "    # 计算整个轮次的平均损失，并将其添加到 epoch_loss_values 列表中\n",
     "    epoch_loss /= step\n",
     "    epoch_loss_values.append(epoch_loss)\n",
+    "    # 打印当前轮次的平均损失\n",
     "    print(f\"epoch {epoch + 1} average loss: {epoch_loss:.4f}\")\n",
-    "\n",
+    "    \n",
+    "    # 如果当前轮次是验证间隔的倍数，则进行验证\n",
     "    if (epoch + 1) % val_interval == 0:\n",
     "        model.eval()\n",
     "        with torch.no_grad():\n",
+    "            # 初始化预测结果和真实标签的张量\n",
     "            y_pred = torch.tensor([], dtype=torch.float32, device=device)\n",
     "            y = torch.tensor([], dtype=torch.long, device=device)\n",
+    "            # 遍历验证数据加载器中的每个批次\n",
     "            for val_data in val_loader:\n",
-    "                val_images, val_labels = (\n",
-    "                    val_data[0].to(device),\n",
-    "                    val_data[1].to(device),\n",
-    "                )\n",
+    "                val_images, val_labels = val_data[0].to(device), val_data[1].to(device)\n",
+    "                # 累加预测结果和真实标签\n",
     "                y_pred = torch.cat([y_pred, model(val_images)], dim=0)\n",
     "                y = torch.cat([y, val_labels], dim=0)\n",
+    "            \n",
+    "            # 将标签转换为 one-hot 编码\n",
     "            y_onehot = [y_trans(i) for i in decollate_batch(y, detach=False)]\n",
+    "            # 将预测结果转换为激活形式\n",
     "            y_pred_act = [y_pred_trans(i) for i in decollate_batch(y_pred)]\n",
+    "            # 计算 AUC 指标，并记录结果\n",
     "            auc_metric(y_pred_act, y_onehot)\n",
     "            result = auc_metric.aggregate()\n",
     "            auc_metric.reset()\n",
+    "            # 释放不再使用的张量\n",
     "            del y_pred_act, y_onehot\n",
-    "            metric_values.append(result)\n",
+    "            # 计算准确率\n",
     "            acc_value = torch.eq(y_pred.argmax(dim=1), y)\n",
     "            acc_metric = acc_value.sum().item() / len(acc_value)\n",
+    "            # 如果当前 AUC 指标优于之前的最佳指标，则保存当前模型的状态字典\n",
     "            if result > best_metric:\n",
     "                best_metric = result\n",
     "                best_metric_epoch = epoch + 1\n",
     "                torch.save(model.state_dict(), os.path.join(root_dir, \"best_metric_model.pth\"))\n",
     "                print(\"saved new best metric model\")\n",
-    "            print(\n",
-    "                f\"current epoch: {epoch + 1} current AUC: {result:.4f}\"\n",
-    "                f\" current accuracy: {acc_metric:.4f}\"\n",
-    "                f\" best AUC: {best_metric:.4f}\"\n",
-    "                f\" at epoch: {best_metric_epoch}\"\n",
-    "            )\n",
+    "            # 打印当前轮次的 AUC、准确率以及最佳指标的相关信息\n",
+    "            print(f\"current epoch: {epoch + 1} current AUC: {result:.4f} \"\n",
+    "                  f\"current accuracy: {acc_metric:.4f} \"\n",
+    "                  f\"best AUC: {best_metric:.4f} \"\n",
+    "                  f\"at epoch: {best_metric_epoch}\")\n",
+    "            # 使用 TensorBoard 记录验证准确率\n",
     "            writer.add_scalar(\"val_accuracy\", acc_metric, epoch + 1)\n",
     "\n",
     "print(f\"train completed, best_metric: {best_metric:.4f} \" f\"at epoch: {best_metric_epoch}\")\n",
