加中文注释

--- a/2d_classification/mednist_tutorial.ipynb
+++ b/2d_classification/mednist_tutorial.ipynb
@@ -641,7 +641,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plot the loss and metric"
+    "## Plot the loss and metric 绘制损失和指标折线图"
    ]
   },
   {
